# fluffyf

./: .gitignore  Cargo.toml  LICENSE-BSD  README.md  TODO.md
src/: lib.rs
src/api/: favorites.rs  file.rs  flag.rs  mod.rs  note.rs  notes.rs  pool.rs  pools.rs  post.rs  post_flag.rs  post_flags.rs  posts.rs  search.rs  supplement.rs  tags.rs  traits.rs
src/api/posts/: flags.rs  mod.rs  rating.rs  relations.rs  score.rs
src/client/: mod.rs  rate_limit.rs
src/connect/: method.rs  methods.rs  mod.rs
tests/: fluffyintegration.rs
