[package]
name = "fluffyf"
version = "0.1.0"
edition = "2021"
authors = ["Ezra Alvarion <ezraalvarion71@gmail.com>"]
description = "An e621 post and pool downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "^1", features = ["full"] }
clap = "^4"
serde_json = "^1"
log = "0.4"
time = { version = "0.3", features = ["serde-human-readable"]}
