[package]
name = "fluffyf"
version = "0.2.0"
authors = ["Ezra Alvarion <ezraalvarion71@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "An e621 api wrapper and downloader"
repository = "https://github.com/AntimatterReactor/fluffyf"
license = "BSD-2-Clause OR Apache-2.0"
keywords = ["e621", "api", "furry"]
categories = ["api-bindings", "command-line-utilities"]

[lib]

[[bin]]
name = "fluffyget"

[[bin]]
name = "fluffypost"

[features]
default = ["rate-limit"]
rate-limit = []

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"]}
clap = "4"
base64 = "0.21"
bytes = "1"
log = "0.4"
simple_logger = "4"
futures = "0.3"

[profile.release]
strip = true
lto = true
